--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-Flask>=1.0.2
-gunicorn>=19.9.0
-itsdangerous>=1.1.0
-Jinja2>=2.10.1
-MarkupSafe>=1.1.1
-Werkzeug>=0.15.5
-Pillow==5.4.0
-numpy>=1.17.2
-scikit-learn>=0.22.2
-pandas>=0.25.1
+Flask==1.1.2
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
+Pillow==7.1.2
+numpy>=1.19.5
+scipy>=1.4.1
+scikit-learn>=0.22.2.post1
+matplotlib>=3.2.2
+pandas>=1.1.5
